# acre2

addons/ace_interact/: fnc_rackChildrenActions.sqf  fnc_radioChildrenActions.sqf
addons/api/: CfgFunctions.hpp  fnc_getMountedRackRadio.sqf  fnc_getVehicleRacks.sqf  fnc_initVehicleRacks.sqf
addons/sys_antenna/: CfgAcreComponents.hpp
addons/sys_components/: CfgAcreBatteries.hpp  script_acre_component_defines.hpp
addons/sys_core/: XEH_preInit.sqf  initSettings.sqf  stringtable.xml
addons/sys_data/: fnc_getPlayerRadioList.sqf
addons/sys_ecs/: CfgEventHandlers.hpp  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  fnc_register.sqf  fnc_unregister.sqf  script_component.hpp
addons/sys_external/: XEH_PREP.hpp  XEH_preInit.sqf  fnc_allowExternalUse.sqf  fnc_getExternalRadioOwner.sqf  fnc_initRadio.sqf  (+8 more)
extensions/src/ACRE2Arma/ecs/: CMakeLists.txt  Types.h  registry.h
extensions/src/ACRE2Arma/ecs/components/: Intercom.h  Player.h  Position.h  Rack.h  Radio.h  UniqueId.h  Vehicle.h
extensions/src/ACRE2Arma/ecs/components/auxiliary/: Connector.h
extensions/src/ACRE2Arma/ecs/components/intercom/: ANVIC3.h  BaseIntercom.h
extensions/src/ACRE2Arma/ecs/components/radio/: ANPRC117F.h  ANPRC148.h  ANPRC152.h  ANPRC343.h  ANPRC77.h  BaseRadio.h  SEM52SL.h  SEM70.h
extensions/src/ACRE2Arma/ecs/systems/: Controller.h  HearableTransmissions.cpp  HearableTransmissions.h  Systems.h
extensions/src/ACRE2Arma/ecs/systems/anvic3/: ANVIC3System.cpp  ANVIC3System.h  FFCSSystem.cpp  FFCSSystem.h  InfantryPhoneSystem.cpp  InfantryPhoneSystem.h  MCSSystem.cpp  MCSSystem.h
extensions/src/ACRE2Arma/ecs/systems/internal/: Object.cpp  Object.h
extensions/src/ACRE2Arma/ecs/systems/rack/: RackController.cpp  RackController.h  RackSystem.cpp  RackSystem.h
extensions/src/ACRE2Arma/ecs/systems/radio/: RadioController.cpp  RadioController.h  RadioSystem.cpp  RadioSystem.h
extensions/src/ACRE2Arma/ecs/systems/unit/: UnitController.cpp  UnitController.h  UnitSystem.cpp  UnitSystem.h
extensions/src/ACRE2Arma/ecs/systems/vehicle/: VehicleController.cpp  VehicleController.h  VehicleSystem.cpp  VehicleSystem.h
(+10 files in other folders)
